# apue

./: CMakeLists.txt  README.md  file.c  ipc1.c  ipc2.c  lock.c  sem1.c  socket.c  socket_client.c
adv_io/: adv_io_fcntl.c  adv_io_mmap.c  adv_io_poll.c  adv_io_pselect.c  adv_io_select.c  record_lock.c
common/: apue.h
daemon/: daemon.c
ipc/: ipc_mq.c  ipc_pipe.c  ipc_semaphore.c  ipc_share_mem.c
socket/: socket.c  socket_client.c
thread/: barrier.c  cond_mutex.c  rw_lock.c  spin_lock.c
