cmake_minimum_required(VERSION 3.21)
project(aup C)

set(CMAKE_C_STANDARD 99)

add_executable(socket socket/socket.c)
add_executable(socket_client socket/socket_client.c)
add_executable(sem1 thread/sem1.c)
add_executable(file file.c)
add_executable(lock thread/lock.c)
add_executable(rw_lock thread/rw_lock.c)
add_executable(spin_lock thread/spin_lock.c)
add_executable(cond_mutex thread/cond_mutex.c)
add_executable(record_lock adv_io/record_lock.c)
add_executable(barrier thread/barrier.c)
add_executable(ipc1 ipc/ipc1.c)
add_executable(ipc2 ipc/ipc2.c)
add_executable(adv_io_select adv_io/adv_io_select.c)
add_executable(adv_io_poll adv_io/adv_io_poll.c)
add_executable(adv_io_pselect adv_io/adv_io_pselect.c)
add_executable(adv_io_mmap adv_io/adv_io_mmap.c)
add_executable(adv_io_aio adv_io/adv_io_aio.c common/apue.h)
add_executable(daemon daemon/daemon.c)
add_executable(ipc_pipe ipc/ipc_pipe.c)
add_executable(ipc_fifo ipc/ipc_fifo.c)
add_executable(ipc_mq ipc/ipc_mq.c)
add_executable(ipc_semaphore ipc/ipc_semaphore.c)
add_executable(ipc_share_mem ipc/ipc_share_mem.c)


target_link_libraries(socket ws2_32.dll)
target_link_libraries(socket_client ws2_32.dll)
